2004-11-04  Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.3:
	- Added in-place mode for kahua-spvr (enable run in-place).
	- Added httpd mode for kahua-spvr (enable own httpd function).
	- Added API(kahua-context-ref*) for name having multiple values
	in a form.
	- Added interp-rss for issuing RSS
	- Added simple Query Language plugin for kahua.persistence
	

2004-11-04  Nobuo Yamashita  <nobsun@sampou.org>

	* doc/Scripts/kahua-spvr.ja : added description for --test option and
	for -H option of kahua-spvr

2004-10-31  Shiro Kawai  <shiro@acm.org>

	* test/spvr-httpd.scm.in : added for testing stand-alone httpd mode
	  of kahua-spvr.

2004-10-19  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm (kahua-context-ref*): added kahua-context-ref*
	  to deal with multiple form values.

2004-10-18  Shiro Kawai  <shiro@acm.org>

	* src/kahua-spvr.scm :
	- static document can be handled in httpd mode.
	- handle worker-specified header (e.g. '302 Moved') properly.
	- handle some class of errors properly in httpd mode (it should be
	  done for cgi-bridge mode as well, but not done yet).
	* src/Makefile.in, src/make-testconf.scm : allow 'in-place' test
	  running.  It is done by creating required symlinks under
	  $(top_builddir)/tmp, and generating a test.conf that points to
	  the directory as working directory.

2004-10-15  Shiro Kawai  <shiro@acm.org>

	* src/kahua/config.scm.in : added kahua-version
	* src/Makefile.in : ditto
	* src/kahua-spvr.scm : added httpd support.  enabled by --httpd or -H
	  option.  static document uri handling and certain header handling
	  aren't working yet.

2004-10-14  Shiro Kawai  <shiro@acm.org>

	* src/make-testconf.scm : a script to generate conf file for
	  'in-place' testing.

	* branching shiro_reorg1 to experiment reorganization.
	* src/kahua-*.in : renamed to kahua-*.scm, and will be installed to 
	  the kahua library directory.
	* src/maka-script.scm : generates shell scripts for kahua commands.